# shellular_automata

./: Cargo.toml
src/: input.rs  main.rs  universe.rs  universe_old.rs  universe_simulator.rs
src/simulator/: mod.rs  universe.rs
src/simulator/conway/: artist.rs  mod.rs  virtual_cursor.rs
src/simulator/custom_wolfram/: mod.rs  universe.rs
