[package]
name = "shellular_automata"
version = "0.1.0"
edition = "2024"

[dependencies]
lerp = "0.5.0"
pixels = "0.13"
rand = "0.10.1"
# You need this junk as of early-2024, because you have to enable rwh_05 which means you need to enable the rest of it manually (the rest is defaults)
winit = { version = "0.29.9", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "wayland-csd-adwaita-crossfont", "wayland-csd-adwaita-notitle", "android-native-activity", "android-game-activity", "serde", "rwh_05", "mint"] }
